# 04-rust

rustProject/: Cargo.toml
rustProject/src/: main.rs
